order and unorder heading added

--- a/listtag.html
+++ b/listtag.html
@@ -4,6 +4,7 @@
 <title>List Tag</title>
 </head>
 <body>
+  <h1>Order list :</h1>
     <H2>College Deparment List:</H2>
     <ol>
       <li>Science</li>
@@ -14,6 +15,7 @@
       <li>BSC</li>
       <li>BA</li>
     </ol>
+    <h1>Unorder list :</h1>
     <ul>
     <li>Science</li>
     <li>Commerce</li>
