--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
             sufficient rest. Physical fitness allows individuals to perform daily tasks with ease and enjoy leisure
             activities with energy. </p>
             Explore the classes by clicking here <a href="service.html">classes</a>
+            <p>Explore the classes!</p>
     </div>
 </body>
 </html>
