new heading add

--- a/service.html
+++ b/service.html
@@ -14,6 +14,7 @@
         <hr>
         <hr>
     </div>
+    <h1>Our Classes:  </h1>
         <h2>1.Cardio:</h2>
         <img src="https://img.freepik.com/free-photo/woman-jogging-running-track_1303-27058.jpg?uid=R182093275&ga=GA1.1.104672804.1736333563&semt=ais_hybrid&w=250">
         <p>Cardio exercise, also known as cardiovascular or aerobic exercise, is any activity that elevates your heart
