--- a/home.html
+++ b/home.html
@@ -21,6 +21,9 @@
             activities with energy. </p>
             Explore the classes by clicking here <a href="service.html">classes</a>
             <p>Explore the classes!</p>
+            <h1>1.cardio</h1>
+            <h1>2.zumba</h1>
+            <h1>3.yoga</h1>
     </div>
 </body>
 </html>
