--- a/service.html
+++ b/service.html
@@ -27,6 +27,9 @@
             Created by Colombian dancer Beto Pérez in 2001, it's a trademarked program with classes in 180 countries and
             over 200,000 locations worldwide. Zumba classes are known for their high-energy, fast-paced, and fun
             atmosphere, incorporating various dance styles like salsa, samba, and merengue. </p>
+            <h2>3.Yoga:</h2>
+        <p>Yoga is an ancient Indian practice that integrates the body, mind, and spirit through a variety of physical
+            postures, breathing exercises, and meditation.</p>
     </div>
 </body>
 </html>
